[gd_scene load_steps=5 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Assets/cross_hair.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.5, 0.5, 1.5 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
GRAVITY = 0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="CenterContainer" type="CenterContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Head/Camera/CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="AimCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.08708 )
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="Staff" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.770825, 2.5074, -0.582886 )
mesh = SubResource( 2 )

[node name="StaffTip" type="Spatial" parent="Head/Staff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
